crates/tui/tests/storybook/snapshots/app_prompt::prompt_slash_completion_with_stash_shrinks_for_short_terminal.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 396
expression: frame.text()
---
 /changelog    show release notes for the latest s
 /btw          ask a side question
 /branch       fork current session
  ◌ Stashed (ctrl+s to unstash)
──────────────────────────────────────────────────
 /
──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
