crates/tui/tests/storybook/snapshots/app_prompt::prompt_stash_row.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---



  ◌ Stashed (ctrl+s to unstash)
──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
