crates/tui/tests/storybook/snapshots/app_prompt::prompt_stash_row_truncates.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 382
expression: frame.text()
---



  ◌ Stashed (ctrl+s t…
────────────────────────

────────────────────────
 ○ normal       1:1 100%
