crates/tui/tests/storybook/snapshots/app_prompt::prompt_turn_queue_row_truncates.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---



  › turn queue message that s…
─ ✿ working… ───────────────────

────────────────────────────────
 ○ normal               1:1 100%
