crates/tui/tests/storybook/snapshots/app_prompt::prompt_typing_renders_into_input.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




────────────────────────────────────────
 hello prompt
────────────────────────────────────────
 ○ normal                       1:1 100%
