crates/tui/tests/storybook/snapshots/app_prompt::prompt_typing_renders_into_input.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 345
expression: frame.styles_text()
---
dim: 40 8
  4   0  40 fg=AnsiValue(237)
  5  13   1 fg=Black bg=White
  6   0  40 fg=AnsiValue(237)
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  7  10  22 bg=AnsiValue(233)
  7  32   8 fg=AnsiValue(244) bg=AnsiValue(233)
