crates/tui/tests/storybook/snapshots/app_prompt::prompt_working_bar_width_ladder.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




─ ✿ compacting… ────────────────── 19.5k (78%) ─

────────────────────────────────────────────────
 ○ normal                               1:1 100%
