crates/tui/tests/storybook/snapshots/app_prompt::prompt_working_bar_width_ladder.step-1.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---




─ ✿ indexing… ──────── 19.5k (78%) ─

────────────────────────────────────
 ○ normal                   1:1 100%
